Bug 132267 - Scrollers for long menus are not shown / black
Summary: Scrollers for long menus are not shown / black
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-04-20 02:38 UTC by Aron Budea
Modified: 2020-05-11 00:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot in 7.0 master build (193.80 KB, image/png)
2020-04-20 02:38 UTC, Aron Budea
Details
Screenshot in 6.4.0.3 (45.79 KB, image/png)
2020-04-20 02:39 UTC, Aron Budea
Details
Screenshot in 6.1.0.3 (41.48 KB, image/png)
2020-04-20 02:40 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2020-04-20 02:38:59 UTC
Created attachment 159746 [details]
Screenshot in 7.0 master build

The following bug is Windows-specific.

When an opened menu is too long, and doesn't fit, scrollers appear on top/bottom.
In the past this could be reproduced by making the window shorter, and moving to the bottom of the screen, but recently LO's become smart, and moves the open menu next to the item to fit, and no scrolling is needed. These days the bug can be reproduced by switching to 150% scaling (on a "normal" sized screen with full HD resolution or less).

Until 6.2.0.3 the scrollers appeared fine.
From 6.3.0.4 the icons have disappeared.
Recently in 7.0.0.0.alpha0+ (bf536201ae83e7ca6a565eb8ff0dbc0e4e887d64), possibly due to Skia, black rectangles are shown instead.

Bibisected the disappearing of the scrollers to the 6.2 backport of the following commit using repo bibisect-win32-6.2. Adding CC: to Miklos Vajna.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c04169c586ef1d55b1d0ac469bb4fbd4f50bd08a
author		Miklos Vajna <vmiklos@collabora.com>	2019-05-21 17:45:05 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-05-21 23:59:28 +0200

"tdf#125415 vcl menu floating window: avoid flicker"

Not sure if knowing where the rectangles turned black is important, I'm guessing fixing the original issue corrects that as well.
Comment 1 Aron Budea 2020-04-20 02:39:48 UTC
Created attachment 159747 [details]
Screenshot in 6.4.0.3
Comment 2 Aron Budea 2020-04-20 02:40:12 UTC
Created attachment 159748 [details]
Screenshot in 6.1.0.3
Comment 3 Miklos Vajna 2020-04-21 07:54:16 UTC
Given that now skia is the default and it provides both raster and Vulkan rendering (both are flicker-free out of the box), I wonder if I should just revert the above on master. (Back then, GL was the default, and lack of HW support meant you had to use GDI, but that's not the case anymore.)

Could you please test if this happens with Skia? If so, this should go to the Skia tracker. Thanks!
Comment 4 Aron Budea 2020-04-21 14:41:17 UTC
Good idea, I checked, and reverting the commit brings the scrollers back, and is flicker-free with Skia/Raster rendering.
Comment 5 Commit Notification 2020-05-07 17:15:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a65ec136fbd0dae889b20fba657b40af467fcb27

tdf#132267 vcl: fix missing scrollers with non-native rendering

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-05-09 20:22:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/60400ca7e60bc9314ceda13e0d74b32b7481f020

tdf#132267 vcl: fix missing scrollers with non-native rendering

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Aron Budea 2020-05-11 00:37:11 UTC
I can see the scrollers in LO 7.0.0.0.alpha1+ (2f4172fc48aab38c64851ba3a384bd6c7c180634) / Windows againm thanks for fixing, Miklos!