tdf#132267 vcl: fix missing scrollers with non-native rendering

Regression from c04169c586ef1d55b1d0ac469bb4fbd4f50bd08a (tdf#125415 vcl
menu floating window: avoid flicker, 2019-05-21) the problem was that
the clip region was set on the buffer, not on the render context. This
means the original clip was used to determine what gets copied from the
buffer to the screen, so the scroller arrows were not rendered.

(cherry picked from commit a65ec136fbd0dae889b20fba657b40af467fcb27)

Change-Id: Id173e6333721891798da58baf2092f4cd21a62ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93780
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>