vcl/source/window/bufferdevice.hxx
@@ -21,10 +21,12 @@ class VCL_DLLPUBLIC BufferDevice
     ScopedVclPtr<VirtualDevice> m_pBuffer;
     VclPtr<vcl::Window> m_pWindow;
     vcl::RenderContext& m_rRenderContext;
+    bool m_bDisposed = false;
 
 public:
     BufferDevice(const VclPtr<vcl::Window>& pWindow, vcl::RenderContext& rRenderContext);
     ~BufferDevice();
+    void Dispose();
 
     vcl::RenderContext* operator->();
     vcl::RenderContext& operator*();
